<resources>
    <string name="app_name">My Pizza</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar</string>
    <!-- Strings used for com.example.mypizza.ui.fragments for navigation -->
    <string name="first_fragment_label">Login</string>
    <string name="second_fragment_label">Main Page</string>
    <string name="third_fragment_label">Create Account</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email">Correo electronico</string>
    <string name="passwordA">Contraseña</string>
    <string name="createA">¿No tienes cuenta?\n</string>
    <string name="linkCreateA">Crea una aquí</string>
    <string name="Login">INICIAR SESIÓN</string>
    <string name="home">Estas en el home del app</string>
    <string name="logout">Cerrar sesión</string>
    <string name="pizza_create">Crea tu pizza</string>
    <string name="createPizza">Crear Pizza</string>
    <string name="config">Configuracion</string>
    <string name="fav">Favoritos</string>
    <string name="rec">Recomendados</string>
    <string name="conf_pass">Confirmar Contraseña</string>
    <string name="crear_cuent">Crear Cuenta</string>
    <string name="cancelar">Cancelar</string>
    <string name="name">Nombre</string>
    <string name="finPedido">Finalizar Pedido</string>
    <string name="address">Dirección:</string>
    <string name="payment">Medio de Pago:</string>
    <string name="pay">Pagar</string>
    <string name="total">Total</string>
    <string name="doughType">Tipo de masa</string>
    <string name="thiccDough">Gruesa</string>
    <string name="thinDough">Delgada</string>
    <string name="ingredients">Ingredientes</string>
    <string name="send">Enviar</string>
    <string name="chooseSize">Elige el tamaño</string>
    <string name="smallL">S</string>
    <string name="mediumL">M</string>
    <string name="largeL">L</string>
    <string name="order">Ordenar</string>
    <string name="total2">Total:</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="splash_pedido" >Pedido Registrado</string>

    <!-- Google maps api key   -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCjUfBPKdfyUqUQbXs0TFgSuVeBsasVGIo</string>

</resources>