<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Login">

    <fragment
        android:id="@+id/Login"
        android:name="com.example.mypizza.ui.fragments.Login"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/login">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/MainPage" />
        <action
            android:id="@+id/to_create_account"
            app:destination="@id/ThirdFragment"/>
    </fragment>
    <fragment
        android:id="@+id/MainPage"
        android:name="com.example.mypizza.ui.fragments.MainPage"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/main_page">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/Login" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.mypizza.ui.fragments.CreateAccount"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/create_account">

        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/Login" />
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/MainPage" />

    </fragment>
</navigation>