<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/half_fab_margin"
        android:text="@string/finPedido"
        android:textSize="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pizza_box"
        />

    <ImageView
        android:id="@+id/pizza_box"
        android:layout_width="@dimen/image_dimen"
        android:layout_height="@dimen/image_dimen"
        android:scaleType="centerInside"
        android:layout_marginTop="@dimen/fab_marginx4"
        android:src="@drawable/pizza_box"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/address"
        android:layout_marginTop="@dimen/fab_marginx4"
        app:layout_constraintTop_toBottomOf="@+id/pizza_box"
        app:layout_constraintBottom_toTopOf="@id/pay_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/pay_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fab_margin"
        android:text="@string/payment"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/order"
        android:layout_marginVertical="@dimen/half_fab_margin"
        android:layout_width="@dimen/dimension_200"
        android:layout_height="@dimen/dimension_40"
        android:textColor="@color/background"
        android:background="@drawable/red_button"
        android:text="@string/pay"
        android:layout_marginTop="@dimen/dimension_144"
        app:layout_constraintTop_toBottomOf="@id/pay_method"
        app:layout_constraintBottom_toTopOf="@id/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="@dimen/fab_margin"
        android:textAlignment="center"
        android:padding="@dimen/fab_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>