<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MainPage">


    <TextView
        android:id="@+id/crea_tupizza_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimension_40"
        android:layout_marginTop="@dimen/margin_24"
        android:text="@string/pizza_create"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pizza_logo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/pizza_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pizza_create"
        android:adjustViewBounds="true"
        android:layout_marginBottom="@dimen/dimension_256"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/crea_tupizza_label"

        />

    <Button
        android:id="@+id/crearPizza"
        android:layout_marginVertical="@dimen/half_fab_margin"
        android:layout_width="@dimen/dimension_200"
        android:layout_height="@dimen/dimension_40"
        app:layout_constraintTop_toBottomOf="@id/pizza_logo"
        app:layout_constraintBottom_toTopOf="@+id/favorite_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/background"
        android:background="@drawable/rounded_corners"
        android:text="Crear Pizza"/>

    <TextView
        android:id="@+id/favorite_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fav"
        app:layout_constraintTop_toBottomOf="@id/crearPizza"
        app:layout_constraintBottom_toTopOf="@id/Reciclerview_favorite"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Reciclerview_favorite"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/favorite_label"
        app:layout_constraintBottom_toTopOf="@id/recommended_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/pizza_list"
    />
    <TextView
        android:id="@+id/recommended_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rec"
        app:layout_constraintTop_toBottomOf="@id/Reciclerview_favorite"
        app:layout_constraintBottom_toTopOf="@id/Reciclerview_recommended"
        app:layout_constraintStart_toStartOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Reciclerview_recommended"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/recommended_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/pizza_list"
        />


</androidx.constraintlayout.widget.ConstraintLayout>